--- a/adynamics3/testComponents/clasess.html
+++ b/adynamics3/testComponents/clasess.html
@@ -29,10 +29,42 @@
 
   <!-- Template Stylesheet -->
   <link href="../css/style.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../check.css">
   <link rel="stylesheet" href="../css/course-details.css" />
 </head>
 
 <body>
+    <!-- Topbar Start -->
+    <div class="container-fluid bg-dark text-light p-0">
+      <div class="row gx-0 d-none d-lg-flex">
+        <div class="col-lg-7 px-5 text-start">
+          <div class="h-100 d-inline-flex align-items-center me-4">
+            <small class="fa fa-map-marker-alt text-primary me-2"></small>
+            <small>Bengaluru, Karanataka, India</small>
+          </div>
+          <div class="h-100 d-inline-flex align-items-center">
+            <small class="far fa-clock text-primary me-2"></small>
+            <small>himanshu@adynamics.in </small>
+          </div>
+        </div>
+        <div class="col-lg-5 px-5 text-end">
+          <div class="h-100 d-inline-flex align-items-center me-4">
+            <small class="fa fa-phone-alt text-primary me-2"></small>
+            <small>+91-8296076136</small>
+          </div>
+          <div class="h-100 d-inline-flex align-items-center mx-n2">
+            <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i
+                class="fab fa-facebook-f" style="font-size: 20px; color: #fff;"></i></a>
+            <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i
+                class="fab fa-twitter" style="font-size: 20px;"></i></a>
+            <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i
+                class="fab fa-linkedin-in" style="font-size: 20px; color:#fff"></i></a>
+            <a class="btn btn-square btn-link rounded-0" href=""><i class="fab fa-instagram"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Topbar End -->
   <!-- Navbar Start -->
   <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
     <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
@@ -47,24 +79,24 @@
 
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a href="jj.html" class="nav-item nav-link active">Home</a>
-            <a href="/adynamics3/testComponents/about-hero.html" class="nav-item nav-link ">About</a>
-            <a href="/adynamics3/testComponents/cource-aboutpage.html" class="nav-item nav-link">Flying</a>
+            <a href="../jj.html" class="nav-item nav-link active">Home</a>
+            <a href="../testComponents/about-hero.html" class="nav-item nav-link ">About</a>
+            <a href="..//testComponents/cource-aboutpage.html" class="nav-item nav-link">Flying</a>
             <div class="dropdown">
-              <a href="/adynamics3/testComponents/clasess.html" class="nav-item nav-link nav-dropdown ">Classes</a>
+              <a href="..//testComponents/clasess.html" class="nav-item nav-link nav-dropdown ">Classes</a>
               <div class="dropdown-menu">
-                <a href="/adynamics3/inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
-                <a href="/adynamics3/course-details.html">DGca CPL Classes</a>
-                <a href="/adynamics3/inidvidual-clases/RTR.html">Radio Telephony (rtr) Class</a>
-                <a href="/adynamics3/inidvidual-clases/niosclasses.html">NIOS Prep Class</a>
+                <a href="../inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
+                <a href="../course-details.html">DGca CPL Classes</a>
+                <a href="../inidvidual-clases/RTR.html">Radio Telephony (rtr) Class</a>
+                <a href="../inidvidual-clases/niosclasses.html">NIOS Prep Class</a>
               </div>
             </div>
-            <a href="/adynamics3/blog/homepageblog.html" class="nav-item nav-link">blog</a>
+            <a href="../blog/homepageblog.html" class="nav-item nav-link">blog</a>
           </div>
           <!-- <a style="background-color: #49aaaa;height: auto; font-size: 1em;" href=""
                 class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">ENQUIRY<i class="fa fa-arrow-right ms-3"></i></a> -->
           <button class="enquiry-button-nav" onclick="redirectEnquiry()">
-            <img src="/adynamics3/assets/img/enquiry.png" alt="">
+            <img src="../assets/img/enquiry.png" alt="">
             <h2>ENQUIRY</h2>
           </button>
         </div>
@@ -192,49 +224,71 @@
   </div>
   <!-- Courses End -->
   <!-- Footer Start -->
-  <div class="container-fluid bg-dark text-light footer my-6 mb-0 py-6 mt-4 wow fadeIn" data-wow-delay="0.1s">
-    <div class="container">
-      <div class="row g-5">
-        <div class="col-lg-3 col-md-6">
-          <h4 class="text-white mb-4">Get In Touch</h4>
-
-          <p class="mb-2">
-            <i class="fa fa-map-marker-alt me-3"></i>Bengaluru, Karanataka,
-          </p>
-          <p class="mb-2">
-            <i class="fa fa-phone-alt me-3"></i>+91-8296076136
-          </p>
-          <p class="mb-2">
-            <i class="fa fa-envelope me-3"></i>himanshu@adynamics.in
-          </p>
-        </div>
-        <div class="col-lg-3 col-md-6">
-          <h4 class="text-light mb-4">Quick Links</h4>
-
-          <a class="btn btn-link" href="">About Us</a>
-          <a class="btn btn-link" href="">Contact Us</a>
-          <a class="btn btn-link" href="">Support</a>
-        </div>
-        <div class="col-lg-3 col-md-6">
-          <h4 class="text-light mb-4">Quick Links</h4>
-          <a class="btn btn-link" href="">Our Services</a>
-          <a class="btn btn-link" href="">Terms & Condition</a>
-          <a class="btn btn-link" href="">Support</a>
-        </div>
-        <div class="col-lg-3 col-md-6">
-
-
-          <h6 class="text-white mt-4 mb-3">Follow Us</h6>
-          <div class="d-flex pt-2">
-            <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-twitter"></i></a>
-            <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-facebook-f"></i></a>
-            <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-youtube"></i></a>
-            <a class="btn btn-square btn-outline-light me-0" href=""><i class="fab fa-linkedin-in"></i></a>
+    <!-- Footer Start -->
+    <footer class="new_footer_area bg_color">
+      <div class="new_footer_top">
+          <div class="container">
+              <div class="row">
+                  <div class="col-lg-3 col-md-6">
+                      <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
+                          <h3 class="f-title f_600 t_color f_size_18">Get in Touch</h3>
+                          <p>Don’t miss any updates of our new templates and extensions.!</p>
+                          <form action="#" class="f_subscribe_two mailchimp" method="post" novalidate="true" _lpchecked="1">
+                              <input type="text" name="EMAIL" class="form-control memail" placeholder="Email">
+                              <button class="btn btn_get btn_get_two" type="submit">Subscribe</button>
+                              <p class="mchimp-errmessage" style="display: none;"></p>
+                              <p class="mchimp-sucmessage" style="display: none;"></p>
+                          </form>
+                      </div>
+                  </div>
+                  <div class="col-lg-3 col-md-6">
+                      <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
+                          <h3 class="f-title f_600 t_color f_size_18">Download</h3>
+                          <ul class="list-unstyled f_list">
+                              <li><a href="#">Company</a></li>
+                              <li><a href="#">Android App</a></li>
+                              <li><a href="#">ios App</a></li>
+                              <li><a href="#">Desktop</a></li>
+                              <li><a href="#">Projects</a></li>
+                              <li><a href="#">My tasks</a></li>
+                          </ul>
+                      </div>
+                  </div>
+                  <div class="col-lg-3 col-md-6">
+                      <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
+                          <h3 class="f-title f_600 t_color f_size_18">Help</h3>
+                          <ul class="list-unstyled f_list">
+                              <li><a href="#">FAQ</a></li>
+                              <li><a href="#">Term &amp; conditions</a></li>
+                              <li><a href="#">Reporting</a></li>
+                              <li><a href="#">Documentation</a></li>
+                              <li><a href="#">Support Policy</a></li>
+                              <li><a href="#">Privacy</a></li>
+                          </ul>
+                      </div>
+                  </div>
+                  <div class="col-lg-3 col-md-6">
+                      <div class="f_widget social-widget pl_70 wow fadeInLeft" data-wow-delay="0.8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInLeft;">
+                          <h3 class="f-title f_600 t_color f_size_18">Team Solutions</h3>
+                          <div class="f_social_icon">
+                              <a href="#" class="fab fa-facebook"></a>
+                              <a href="#" class="fab fa-twitter"></a>
+                              <a href="#" class="fab fa-linkedin"></a>
+                              <a href="#" class="fab fa-pinterest"></a>
+                          </div>
+                      </div>
+                  </div>
+              </div>
           </div>
-        </div>
+          <div class="footer_bg">
+              <div class="footer_bg_one"></div>
+              <div class="footer_bg_two"></div>
+          </div>
       </div>
-    </div>
-  </div>
+      
+  </footer>
+    <!-- Footer End -->
+  
   <!-- Copyright End -->
 
   <!-- Back to Top -->
