to chnage file path

--- a/adynamics3/testComponents/cource-aboutpage.html
+++ b/adynamics3/testComponents/cource-aboutpage.html
@@ -28,7 +28,7 @@
     <link href="../css/style.css" rel="stylesheet" />
     <link rel="stylesheet" href="../check.css">
     <link rel="stylesheet" href="../css/course-details.css" />
-    <link rel="stylesheet" href="/adynamics3/css/globe.css">
+    <link rel="stylesheet" href="../css/globe.css">
 </head>
 
 <body>
